@@ -1,5 +1,6 @@
 Changes for 1.4.2:
 
+ - improved not supported values processing (Eugene)
  - fixed processing of user parameters and remote commands having character '%' (Alexei)
 
 Changes for 1.4.1:
